bookmarks layout problem fixed

--- a/experimental/style/codeEditor.css
+++ b/experimental/style/codeEditor.css
@@ -69,3 +69,6 @@
 	font-style:italic;
 	line-height:15px;
 }
+table, table tr, table tr td{
+	padding:0;
+}
